--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,6 @@
 	<url>http://maven.apache.org</url>
 
 	<properties>
-		<mongo-version>3.3.0</mongo-version>
 		<poi-version>3.9</poi-version>
 		<poi-ooxml-version>3.9</poi-ooxml-version>
 		<poi-ooxml-schemas-version>3.9</poi-ooxml-schemas-version>
@@ -61,6 +60,16 @@
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<version>6.9.10</version>
+		</dependency>
+		<dependency>
+			<groupId>org.uncommons</groupId>
+			<artifactId>reportng</artifactId>
+			<version>1.1.4</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.inject</groupId>
+			<artifactId>guice</artifactId>
+			<version>3.0</version>
 		</dependency>
 
 	</dependencies>
