Add Test Data excel sheet and sample test case to read data

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<url>http://maven.apache.org</url>
 
 	<properties>
+		<mongo-version>3.3.0</mongo-version>
 		<poi-version>3.9</poi-version>
 		<poi-ooxml-version>3.9</poi-ooxml-version>
 		<poi-ooxml-schemas-version>3.9</poi-ooxml-schemas-version>
