--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,25 +1,11 @@
-// Here we have defined root logger
-log4j.rootLogger=DebugAppender
-log4j.rootLogger=INFO,CONSOLE,R,HTML,TTCC
+# Define the root logger with appender file
+log4j.rootLogger = info, FILE
 
-// Here we define the appender
-log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
-log4j.appender.R=org.apache.log4j.RollingFileAppender
-log4j.appender.TTCC=org.apache.log4j.RollingFileAppender
-log4j.appender.HTML=org.apache.log4j.FileAppender
+# Define the file appender
+log4j.appender.FILE=org.apache.log4j.FileAppender
+log4j.appender.FILE.File=./Logs/app.html
+log4j.appender.FILE.Append=false
 
-// Here we define log file location
-log4j.appender.R.File=./log/testlog.log
-log4j.appender.TTCC.File=./log/testlog1.log
-log4j.appender.HTML.File=./log/application.html
-
-// Here we define the layout and pattern
-log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLE.layout.ConversionPattern= %5p [%t] (%F:%L)- %m%n
-log4j.appender.R.layout=org.apache.log4j.PatternLayout
-log4j.appender.R.layout.ConversionPattern=%d - %c -%p - %m%n
-log4j.appender.TTCC.layout=org.apache.log4j.TTCCLayout
-log4j.appender.TTCC.layout.DateFormat=ISO8601
-log4j.appender.HTML.layout=org.apache.log4j.HTMLLayout
-log4j.appender.HTML.layout.Title=Application log
-log4j.appender.HTML.layout.LocationInfo=true
+# Define the layout for file appender
+log4j.appender.FILE.layout=org.apache.log4j.HTMLLayout
+log4j.appender.FILE.layout.LocationInfo=true
