--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,11 +1,16 @@
 # Define the root logger with appender file
-log4j.rootLogger = info, FILE
+log4j.rootLogger = info, FILE, CONSOLE
 
-# Define the file appender
+# Define the file appender can b ignred
 log4j.appender.FILE=org.apache.log4j.FileAppender
 log4j.appender.FILE.File=./Logs/app.html
 log4j.appender.FILE.Append=false
 
 # Define the layout for file appender
+log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
+log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
+log4j.appender.CONSOLE.layout.ConversionPattern= %5p [%t] (%F:%L)- %m%n
+
+# can b ignred
 log4j.appender.FILE.layout=org.apache.log4j.HTMLLayout
 log4j.appender.FILE.layout.LocationInfo=true
